WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155603
AX: WEB: VoiceOver does not announce some WAI-ARIA document structures
https://bugs.webkit.org/show_bug.cgi?id=155603
Summary
AX: WEB: VoiceOver does not announce some WAI-ARIA document structures
chris fleizach
Reported
2016-03-17 15:28:45 PDT
iOS AX does not expose footer, article, document, note <
rdar://problem/20383214
>
Attachments
patch
(7.47 KB, patch)
2016-03-17 23:33 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(7.47 KB, patch)
2016-03-17 23:37 PDT
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-03-17 15:29:03 PDT
<
rdar://problem/25227385
>
chris fleizach
Comment 2
2016-03-17 23:33:16 PDT
Created
attachment 274382
[details]
patch
WebKit Commit Bot
Comment 3
2016-03-17 23:36:07 PDT
Attachment 274382
[details]
did not pass style-queue: ERROR: Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:965: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:966: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
chris fleizach
Comment 4
2016-03-17 23:37:43 PDT
Created
attachment 274384
[details]
patch
chris fleizach
Comment 5
2016-03-17 23:55:22 PDT
http://trac.webkit.org/changeset/198381
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug