AX: WEB: VoiceOver does not announce some WAI-ARIA document structures https://bugs.webkit.org/show_bug.cgi?id=155603 <rdar://problem/25227385>

Reviewed by Darin Adler.

Source/WebCore:

Expose more ARIA landmark type roles on iOS for accessibility.

Updated test: accessibility/ios-simulator/landmark-type.html

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper _accessibilityIsLandmarkRole:]):
(-[WebAccessibilityObjectWrapper accessibilityLabel]):
* platform/LocalizedStrings.cpp:
(WebCore::searchMenuClearRecentSearchesText):
(WebCore::AXWebAreaText):
(WebCore::AXListItemActionVerb):
(WebCore::AXAutoFillCredentialsLabel):
* platform/LocalizedStrings.h:

LayoutTests:

* accessibility/ios-simulator/landmark-type-expected.txt:
* accessibility/ios-simulator/landmark-type.html:



Canonical link: https://commits.webkit.org/173738@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198381 268f45cc-cd09-0410-ab3c-d52691b4dbfc